Fix refresh and sync btns alignments

--- a/src/ui/SyncButton/_SyncButton.scss
+++ b/src/ui/SyncButton/_SyncButton.scss
@@ -1,6 +1,5 @@
 .sync-pref-button {
   height: 24px;
-  margin-bottom: 8px;
   cursor: pointer;
 }
 
